Revert "Merge branch 'master' of github.com:axios/axios"
This reverts commit 48dbfc5181e8871083fccff17deea15024ca0dd6, reversing
changes made to 36c1f46cb3e39b620bf81b5ba4069f1ddd02d4ce.

--- a/sandbox/client.html
+++ b/sandbox/client.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>axios</title>
-  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
   <style type="text/css">
     pre {
+      max-height: 200px;
       min-height: 39px;
       overflow: auto;
     }
@@ -57,11 +58,6 @@
     <pre id="response">No Data</pre>
   </div>
 
-  <div class="well">
-    <h3>Error</h3>
-    <pre id="error">None</pre>
-  </div>
-
   <script src="/axios.js"></script>
   <script>
     (function () {
@@ -85,7 +81,6 @@
       var submit = document.getElementById('submit');
       var request = document.getElementById('request');
       var response = document.getElementById('response');
-      var error = document.getElementById('error');
 
       function acceptsData(method) {
         return ['PATCH', 'POST', 'PUT'].indexOf(method) > -1;
@@ -143,11 +138,8 @@
         axios(options)
           .then(function (res) {
             response.innerHTML = JSON.stringify(res.data, null, 2);
-            error.innerHTML = "None";
           })
           .catch(function (res) {
-            error.innerHTML = JSON.stringify(res.toJSON(), null, 2)
-            console.error('Axios caught an error from request', res.toJSON());
             response.innerHTML = JSON.stringify(res.data, null, 2);
           });
       };
